:bug: Fixed Vie height issue on mobile browsers

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -4,12 +4,14 @@
    height: $navHeight;
    background-color: #36404a;
 
-   position: absolute;
-   bottom: 0;
-   left: 0;
-   right: 0;
+   // position: absolute;
+   // bottom: 0;
+   // left: 0;
+   // right: 0;
 
    z-index: 2;
+
+   flex-shrink: 0;
 }
 
 .items-list {
