--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,6 +22,8 @@ body {
 #app {
    position: relative;
    background-color: #303841;
+   display: flex;
+   flex-direction: column;
 }
 
 .h1,
